# scholar-cli

./: README.md  pyproject.toml
benchmark/: RESULTS.md  questions.txt  results.md  results_filtered.md  run_benchmark.py
scholar_cli/: cli.py  openalex.py  ranking.py  relevance.py  render.py
tests/: test_context.py  test_openalex_contract.py  test_ranking.py  test_relevance.py
