[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scholar-cli"
version = "0.3.0"
description = "Scholarly search CLI for AI agents. One command, one source, no API key."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
scholar = "scholar_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["scholar_cli"]
